--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
             <div class="row no-gutters" style="height: 100%;">
 
                 <!-- LEFT COLUMN -->
-                <div class="col-12 col-xl-3 left-column-outer">
+                <div class="col-12 col-xl-2 left-column-outer">
                     <div id="leftColumn" class="left-column-container">
 
                         <div class="close-button-container">
@@ -42,7 +42,7 @@
 
                         <div class="row no gutters">
                             <div class="col-11 center-align">
-                                <img class="icon" src="images/udemy_icon.png" alt="Icon Here">
+                                <img src="images/udemy_icon.png" alt="Icon Here">
                             </div>
                         </div>
 
@@ -110,7 +110,7 @@
                 </div>
 
                 <!-- MIDDLE COLUMN -->
-                <div class="col-12 col-xl-6 middle-column-outer">
+                <div class="col-12 col-xl-8 middle-column-outer">
                     <div class="middle-column-container">
 
                         <div class="row header-container">
@@ -147,20 +147,24 @@
                         <div class="middle-bottom-half-container row no-gutters">
 
                             <div class="col-12 col-sm-6 classes-info-container">
-                                <span class="info-title-font">Classes</span>
-                                <span class="more-classes-container">
-                                    <a href="#" class="more-classes-font">More ></a>
-                                </span>
+                                <div class="content">
+                                    <span class="info-title-font">Classes</span>
+                                    <span class="more-classes-container">
+                                        <a href="#" class="more-classes-font">More ></a>
+                                    </span>
 
-                                <div id="classList" class="class-list-container"></div>
+                                    <div id="classList" class="class-list-container"></div>
+                                </div>
                             </div>
 
                             <div class="col-12 col-sm-6 hours-info-container">
-                                <div class="info-title-font">
-                                    Hours spent on learning past week
-                                </div>
-                                <div class="chart-container">
-                                    <canvas id="myChart"></canvas>
+                                <div class="content">
+                                    <div class="info-title-font">
+                                        Hours spent on learning past week
+                                    </div>
+                                    <div class="chart-container">
+                                        <canvas id="myChart"></canvas>
+                                    </div>
                                 </div>
                             </div>
 
@@ -170,7 +174,7 @@
                 </div>
 
                 <!-- RIGHT COLUMN -->
-                <div class="col-12 col-xl-3 right-column-outer">
+                <div class="col-12 col-xl-2 right-column-outer">
                     <div class="right-column-container">
 
                         <div class="close-button-container">
