fix: fix bug where blank space would appear at the bottom

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
 
-            <div class="row no-gutters" style="height: 100%;">
+            <div class="row no-gutters fill-container">
 
                 <!-- LEFT COLUMN -->
                 <div class="col-12 col-xl-2 left-column-outer">
