styles/completed FEATURE section with mobile support

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <a href="#Blog">Blog</a>
         <a href="#Contact-us">Contact Us</a>
     </div>
+
+    <!-- LANDING SECTION -->
     <div class="wrapper">
         <nav>
             <a href="#" class="county-logo animated fadeInLeft"><label for="county-logo">county</label></a>
@@ -66,16 +68,19 @@
                 <a href="#" id="open">&#9776</a>
             </div>
         </nav>
+
         <div class="landing">
             <h2 class="animated fadeInLeft">Record your expenses</h2>
             <h1 class="animated fadeInLeft">on-the-fly</h1>
-            <a href="#" class="btnLarge animated fadeInUp"><p>Download now</p></a>
+            <button class="btnLarge animated fadeInUp">Download now</button>
             <div class="appPreview animated fadeIn">
                 <img src="static/img/app_preview.png" alt="App Preview" class="maintainRatio">
             </div>
         </div>
     </div>
     <div class="triangle-left"></div>
+
+    <!-- ABOUT SECTION -->
     <div class="about-section">
         <div class="wrapper">
             <div class="about-info">
@@ -97,11 +102,67 @@
             </div>
         </div>
     </div>
+
+    <!-- FEATURES SECTION -->
+    <div class="features-section">
+        <div class="wrapper">
+            <div class="features-info">
+                <div class="left-column">
+                    <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="0" data-aos-once=true>
+                        <div class="icon-wrapper">
+                            <img src="/static/img/icons/Icon ionic-ios-rocket.svg" alt="fast-and-powerful" class="icon">
+                        </div>
+                        <div class="content">
+                            <h2>Fast & Powerful</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200" data-aos-once=true>
+                        <div class="icon-wrapper">
+                            <img src="/static/img/icons/Icon feather-book-open.svg" alt="readable-layout" class="icon">
+                        </div>
+                        <div class="content">
+                            <h2>Readable Layout</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="img-column">
+                    <div class="header" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="0" data-aos-once=true>
+                        <h2 >Features</h2>
+                        <div class="rect"></div>
+                    </div>
+                    <img src="/static/img/app_preview.png" alt="app-preview" class="app-preview" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1200" data-aos-once=true>
+                </div>
+                <div class="right-column">
+                    <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400" data-aos-once=true>
+                        <div class="icon-wrapper">
+                            <img src="/static/img/icons/Icon ionic-ios-stats.svg" alt="useful-statistics" class="icon">
+                        </div>
+                        <div class="content">
+                            <h2>Useful Statistics</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="feature-item" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600" data-aos-once=true>
+                        <div class="icon-wrapper">
+                            <img src="/static/img/icons/Icon feather-cloud.svg" alt="cloud-storage" class="icon">
+                        </div>
+                        <div class="content">
+                            <h2>Cloud Storage</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer"></div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
