styles/ finished BLOG section with mobile support

--- a/index.html
+++ b/index.html
@@ -158,6 +158,117 @@
         </div>
         <div class="footer"></div>
     </div>
+    <!-- BLOG SECTION -->
+    <div class="blog-section">
+        <div class="wrapper">
+            <div class="header" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="0" data-aos-once=true>
+                <h2 class="title">Recent Blog Posts</h2>
+                <div class="rect"></div>
+            </div>
+
+            <div class="blog-main-grid">
+                <div class="main-article-grid" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200" data-aos-once=true>
+                    <div class="img-child">
+                        <img src="/static/img/stock-market.png" alt="" class="featured-image">
+                    </div>
+                    
+                    <div class="info-child">
+                        <h2 class="blog-title">Stock market crash causes massive panic amongst public</h2>
+                        <p class="blog-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                            nisi ut aliquip ex ea commodo consequat.
+                        </p>
+
+                        <div class="date-time">
+                            <div class="date-grid">
+                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <p class="text">19.04.2020</p>
+                            </div>
+                            <div class="time-grid">
+                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <p class="text">2.47p.m</p>
+                            </div>
+                        </div>
+
+                        <div class="view-article-grid">
+                            <p class="text">VIEW ARTICLE</p>
+                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="secondary-article-grid">
+                    <div class="secondary-article" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" data-aos-once=true>
+                        <h2 class="blog-title">3 Things to Watch in the Stock Market This Week</h2>
+                        <p class="blog-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+
+                        <div class="date-time">
+                            <div class="date-grid">
+                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <p class="text">19.04.2020</p>
+                            </div>
+                            <div class="time-grid">
+                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <p class="text">2.47p.m</p>
+                            </div>
+                        </div>
+
+                        <div class="view-article-grid">
+                            <p class="text"></p>
+                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                        </div>
+                    </div>
+
+                    <div class="secondary-article" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600" data-aos-once=true>
+                        <h2 class="blog-title">Bursa Malaysia and Shenzen stock exchange ...</h2>
+                        <p class="blog-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+
+                        <div class="date-time">
+                            <div class="date-grid">
+                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <p class="text">19.04.2020</p>
+                            </div>
+                            <div class="time-grid">
+                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <p class="text">2.47p.m</p>
+                            </div>
+                        </div>
+
+                        <div class="view-article-grid">
+                            <p class="text"></p>
+                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                        </div>
+                    </div>
+
+                    <div class="secondary-article" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800" data-aos-once=true>
+                        <h2 class="blog-title">Malaysia Stock Market Poised To Rebound On ...</h2>
+                        <p class="blog-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+
+                        <div class="date-time">
+                            <div class="date-grid">
+                                <img src="/static/img/icons/calendar.svg" alt="" class="icon">
+                                <p class="text">19.04.2020</p>
+                            </div>
+                            <div class="time-grid">
+                                <img src="/static/img/icons/clock.svg" alt="" class="icon">
+                                <p class="text">2.47p.m</p>
+                            </div>
+                        </div>
+
+                        <div class="view-article-grid">
+                            <p class="text"></p>
+                            <img src="/static/img/icons/arrow-right.svg" alt="" class="icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="right-triangle"></div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
