--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="styles/stylesLeft.css">
     <link rel="stylesheet" href="styles/stylesMiddle.css">
     <link rel="stylesheet" href="styles/stylesRight.css">
+
+    <script src="/scripts/pace.js"></script>
+    <link rel="stylesheet" href="/styles/pace-simple.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <title>Dashboard</title>
 </head>
 
@@ -42,17 +46,17 @@
 
                         <div class="row no gutters">
                             <div class="col-11 center-align">
-                                <img src="images/udemy_icon.png" alt="Icon Here">
+                                <img src="images/udemy_icon.png" alt="Icon Here" class="animated fadeIn">
                             </div>
                         </div>
 
                         <div class="row no gutters">
                             <div class="col-11 center-align">
-                                <p class="company-font">Learny</p>
+                                <p class="company-font animated fadeIn">Learny</p>
                             </div>
                         </div>
 
-                        <div class="row no-gutters category-container">
+                        <div class="row no-gutters category-container animated fadeInUp delay-1s">
                             <div class="col-4 category-icon-container">
                                 <img src="images/navbar_icons/01-dashboard-icon.svg">
                             </div>
@@ -61,7 +65,7 @@
                             </div>
                         </div>
 
-                        <div class="row no-gutters category-container">
+                        <div class="row no-gutters category-container animated fadeInUp delay-1s">
                             <div class="col-4 category-icon-container">
                                 <img src="images/navbar_icons/02-classes-icon.svg">
                             </div>
@@ -70,7 +74,7 @@
                             </div>
                         </div>
 
-                        <div class="row no-gutters category-container">
+                        <div class="row no-gutters category-container animated fadeInUp delay-1s">
                             <div class="col-4 category-icon-container">
                                 <img src="images/navbar_icons/03-resources-icon.svg">
                             </div>
@@ -79,7 +83,7 @@
                             </div>
                         </div>
 
-                        <div class="row no-gutters category-container">
+                        <div class="row no-gutters category-container animated fadeInUp delay-1s">
                             <div class="col-4 category-icon-container">
                                 <img src="images/navbar_icons/04-learning-planning-icon.svg">
                             </div>
@@ -88,7 +92,7 @@
                             </div>
                         </div>
 
-                        <div class="row no-gutters category-container">
+                        <div class="row no-gutters category-container animated fadeInUp delay-1s">
                             <div class="col-4 category-icon-container">
                                 <img src="images/navbar_icons/05-chat-icon.svg">
                             </div>
@@ -97,7 +101,7 @@
                             </div>
                         </div>
 
-                        <div class="row no-gutters category-container">
+                        <div class="row no-gutters category-container animated fadeInUp delay-1s">
                             <div class="col-4 category-icon-container">
                                 <img src="images/navbar_icons/06-settings-icon.svg">
                             </div>
@@ -110,10 +114,10 @@
                 </div>
 
                 <!-- MIDDLE COLUMN -->
-                <div class="col-12 col-xl-8 middle-column-outer">
+                <div class="col-12 col-xl-7 middle-column-outer">
                     <div class="middle-column-container">
 
-                        <div class="row header-container">
+                        <div class="row header-container animated fadeInDown delay-1s">
                             <div class="col-4 align-self-center">
                                 <div class="dashboard-font">Dasbboard</div>
                             </div>
@@ -127,7 +131,7 @@
                             </div>
                         </div>
 
-                        <table class="welcome-back-container">
+                        <table class="welcome-back-container animated fadeInDown delay-1s">
                             <tr>
                                 <td class="last-login-container">
                                     <p id="welcomeBack" class="welcome-back-font"></p>
@@ -146,7 +150,7 @@
 
                         <div class="middle-bottom-half-container row no-gutters">
 
-                            <div class="col-12 col-sm-6 classes-info-container">
+                            <div class="col-12 col-sm-6 classes-info-container animated fadeInUp delay-1s">
                                 <div class="content">
                                     <span class="info-title-font">Classes</span>
                                     <span class="more-classes-container">
@@ -157,7 +161,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-12 col-sm-6 hours-info-container">
+                            <div class="col-12 col-sm-6 hours-info-container animated fadeInUp delay-1s">
                                 <div class="content">
                                     <div class="info-title-font">
                                         Hours spent on learning past week
@@ -174,27 +178,28 @@
                 </div>
 
                 <!-- RIGHT COLUMN -->
-                <div class="col-12 col-xl-2 right-column-outer">
+                <div class="col-12 col-xl-3 right-column-outer">
                     <div class="right-column-container">
 
                         <div class="close-button-container">
                             <a href="javascript:void(0)" class="close-button" onclick="closeRightColumnSidebar()">×</a>
                         </div>
 
-                        <div class="logout-container">
+                        <div class="logout-container animated fadeInDown delay-1s">
                             <span class="logout-font">Logout</span>
                             <span class="logout-logo">
                                 <img src="images/logout_icon.png">
                             </span>
                         </div>
 
-                        <div class="profile-container">
-                            <img src="images/profile_picture_hero.png">
+                        <div class="profile-container  animated fadeInUp delay-1s">
+                            <img src="images/profile_picture_hero.svg" class="profile-icon">
+                            <img src="images/add-icon.svg" alt="" class="add-icon">
                             <p id="profileName" class="profile-name-font"></p>
                             <p id="profileTitle" class="profile-title-font"></p>
                         </div>
 
-                        <div id="topicList" class="topics-completion-container"></div>
+                        <div id="topicList" class="topics-completion-container animated fadeInUp delay-1s"></div>
 
                     </div>
                 </div>
