style/completed desktop view for contact-us and footer

--- a/index.html
+++ b/index.html
@@ -269,6 +269,68 @@
         </div>
         <div class="right-triangle"></div>
     </div>
+
+    <!-- CONTACT SECTION -->
+    <div class="contact-section">
+        <div class="wrapper">
+            <div class="form">
+                <div class="header">
+                    <h2 class="company-name">county</h2>
+                    <div class="description-grid">
+                        <p class="description">Have something to ask us?</p>
+                        <p class="description">Ask away!</p>
+                    </div>
+                </div>
+
+                <div class="input-fields">
+                    <div class="first-row">
+                        <input type="text" class="input-style name" placeholder="Full name">
+                        <input type="text" class="input-style email" placeholder="Email">
+                    </div>
+                    <input type="text" class="input-style subject" placeholder="Subject">
+                    <textarea type="text" class="input-style message" placeholder="Enter a message..."></textarea>
+                </div>
+                <div class="btn">
+                    <a href="#" class="send-btn">
+                        Send message
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- FOOTER SECTION -->
+    <div class="footer-section">
+        <div class="wrapper">
+            <div class="left-section">
+                <h2 class="company-name">county</h2>
+                <p class="copyright">COPYRIGHT ©2020 ALL RIGHTS RESERVED</p>
+            </div>
+
+            <div class="right-section">
+                <div class="navigation">
+                    <div class="nav-grid">
+                        <a href="#Home" class="links">Home</a>
+                        <a href="#About" class="links">About</a>
+                        <a href="#Features" class="links">Features</a>
+                    </div>
+                    <div class="nav-grid">
+                        <a href="#Blog" class="links">Blog</a>
+                        <a href="#" class="links">Articles</a>
+                        <a href="#ContactUs" class="links">Contact Us</a>
+                    </div>
+                </div>
+
+                <div class="social-media">
+                    <img src="/static/img/icons/instagram.svg" alt="instagram">
+                    <img src="/static/img/icons/pinterest.svg" alt="pinterest">
+                    <img src="/static/img/icons/facebook.svg" alt="facebook">
+                    <img src="/static/img/icons/twitter.svg" alt="twitter">
+                    <img src="/static/img/icons/youtube.svg" alt="youtube">
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
