style/ added background circle shapes in contact-us section

--- a/index.html
+++ b/index.html
@@ -294,7 +294,15 @@
                     <a href="#" class="send-btn">
                         Send message
                     </a>
+                    <div class="background-circle-1">
+                        <div class="larger-circle"></div>
+                        <div class="smaller-circle"></div>
+                    </div>
                 </div>
+            </div>
+            <div class="background-circle-2">
+                <div class="larger-circle"></div>
+                <div class="smaller-circle"></div>
             </div>
         </div>
     </div>
