style/ completed mobile view for Contact and Footer section

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     </div>
                 </div>
 
-                <div class="input-fields">
+                <div class="input-fields"  data-aos="fade-right" data-aos-duration="1000" data-aos-delay="0" data-aos-once=true>
                     <div class="first-row">
                         <input type="text" class="input-style name" placeholder="Full name">
                         <input type="text" class="input-style email" placeholder="Email">
@@ -290,7 +290,7 @@
                     <input type="text" class="input-style subject" placeholder="Subject">
                     <textarea type="text" class="input-style message" placeholder="Enter a message..."></textarea>
                 </div>
-                <div class="btn">
+                <div class="btn" data-aos="fade" data-aos-duration="1000" data-aos-delay="1000" data-aos-once=true>
                     <a href="#" class="send-btn">
                         Send message
                     </a>
