feat/ Added smooth scrolling for navigation links

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <a href="#About">About</a>
         <a href="#Features">Features</a>
         <a href="#Blog">Blog</a>
-        <a href="#Contact-us">Contact Us</a>
+        <a href="#ContactUs">Contact Us</a>
     </div>
 
     <!-- LANDING SECTION -->
-    <div class="wrapper">
+    <section class="wrapper" id="Home">
         <nav>
             <a href="#" class="county-logo animated fadeInLeft"><label for="county-logo">county</label></a>
             <div class="desktop animated fadeInDown">
@@ -62,7 +62,7 @@
                 <a href="#About">About</a>
                 <a href="#Features">Features</a>
                 <a href="#Blog">Blog</a>
-                <a href="#Contact-us">Contact Us</a>
+                <a href="#ContactUs">Contact Us</a>
             </div>
             <div class="mobile animated fadeInDown">
                 <a href="#" id="open">&#9776</a>
@@ -77,11 +77,11 @@
                 <img src="static/img/app_preview.png" alt="App Preview" class="maintainRatio">
             </div>
         </div>
-    </div>
-    <div class="triangle-left"></div>
+    </section>
+    <section class="triangle-left"></section>
 
     <!-- ABOUT SECTION -->
-    <div class="about-section">
+    <section class="about-section" id="About">
         <div class="wrapper">
             <div class="about-info">
                 <img src="/static/img/pie-chart.svg" alt="pie-chart" class="about-img" data-aos="fade-right" data-aos-duration="1000" data-aos-once=true>
@@ -101,10 +101,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- FEATURES SECTION -->
-    <div class="features-section">
+    <section class="features-section" id="Features">
         <div class="wrapper">
             <div class="features-info">
                 <div class="left-column">
@@ -157,9 +157,10 @@
             </div>
         </div>
         <div class="footer"></div>
-    </div>
+    </section>
+
     <!-- BLOG SECTION -->
-    <div class="blog-section">
+    <section class="blog-section" id="Blog">
         <div class="wrapper">
             <div class="header" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="0" data-aos-once=true>
                 <h2 class="title">Recent Blog Posts</h2>
@@ -268,10 +269,10 @@
             </div>
         </div>
         <div class="right-triangle"></div>
-    </div>
+    </section>
 
     <!-- CONTACT SECTION -->
-    <div class="contact-section">
+    <section class="contact-section" id="ContactUs">
         <div class="wrapper">
             <div class="form">
                 <div class="header">
@@ -305,10 +306,10 @@
                 <div class="smaller-circle"></div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- FOOTER SECTION -->
-    <div class="footer-section">
+    <section class="footer-section" id="Footer">
         <div class="wrapper">
             <div class="left-section">
                 <h2 class="company-name">county</h2>
@@ -338,7 +339,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
