feat: added homepage

--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -24,13 +24,13 @@
 
             <div class="navlinks-container">
                 <a href="#">
-                    <h2>Home</h2>
+                    <p class="navlink-font">Home</p>
                 </a>
                 <a href="#">
-                    <h2>About</h2>
+                    <p class="navlink-font">About</p>
                 </a>
                 <a href="#">
-                    <h2>Contact</h2>
+                    <p class="navlink-font">Contact</p>
                 </a>
             </div>
 
@@ -47,27 +47,67 @@
 
         <!-- NAVBAR FOR DESKTOP -->
         <div class="navibar-desktop row">
-            <div class="offset-1 col-5 padding-0 align-self-center">
+            <div class="offset-md-1 col-4 padding-0 align-self-center navtitle-container">
                 <h1>Logik</h1>
             </div>
 
-            <div class="col-5 padding-0 align-self-center">
+            <div class="col-7 col-md-5 padding-0 align-self-center">
                 <div class="row no-gutters float-right navlinks-container">
                     <a href="#">
-                        <h2>Home</h2>
+                        <p class="navlink-font">Home</p>
                     </a>
                     <a href="#">
-                        <h2>About</h2>
+                        <p class="navlink-font">About</p>
                     </a>
                     <a href="#">
-                        <h2>Contact</h2>
+                        <p class="navlink-font">Contact</p>
                     </a>
                 </div>
             </div>
         </div>
 
         <!-- HOME PAGE -->
-        <div class="homepage-container">Content Here</div>
+        <div class="homepage-container">
+
+            <div class="circle circle-red"></div>
+            <div class="circle circle-yellow"></div>
+            <div class="circle circle-green"></div>
+
+            <div class="row no-gutters align-items-center">
+
+                <div class="col-12 col-sm-6">
+                    <div class="hero-icon">
+                        <img class="mobile" src="images/hero-icon-mobile.svg">
+                        <img class="desktop" src="images/hero-icon-desktop.svg">
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-5 homepage-info">
+                    <div class="content">
+                        <h6>
+                            TRUSTED BY MILLIONS
+                        </h6>
+                        <h2>
+                            Lorem ipsum dolor sit amet
+                            consectetur adipiscing elit
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et 
+                            dolore magna aliqua.
+                        </p>
+                        <div class="getstarted-button-container">
+                            <button>
+                                GET STARTED
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        
     </div>
 
 </body>
