feat: accomodated for tablet view

--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/styles-global.css">
     <link rel="stylesheet" href="styles/styles-navbar.css">
     <link rel="stylesheet" href="styles/styles-homepage.css">
+    <link rel="stylesheet" href="styles/styles-homepage-circles.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
@@ -75,14 +76,14 @@
 
             <div class="row no-gutters align-items-center">
 
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-xl-6">
                     <div class="hero-icon">
                         <img class="mobile" src="images/hero-icon-mobile.svg">
                         <img class="desktop" src="images/hero-icon-desktop.svg">
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-5 homepage-info">
+                <div class="col-12 col-xl-5 homepage-info">
                     <div class="content">
                         <h6>
                             TRUSTED BY MILLIONS
