--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="styles/styles-navbar.css">
     <link rel="stylesheet" href="styles/styles-homepage.css">
     <link rel="stylesheet" href="styles/styles-homepage-circles.css">
+    <link rel="stylesheet" href="styles/styles-aboutpage.css">
+    <link rel="stylesheet" href="styles/styles-aboutpage-squares.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
@@ -48,11 +50,11 @@
 
         <!-- NAVBAR FOR DESKTOP -->
         <div class="navibar-desktop row">
-            <div class="offset-md-1 col-4 padding-0 align-self-center navtitle-container">
+            <div class="offset-xl-1 col-4 padding-0 align-self-center navtitle-container">
                 <h1>Logik</h1>
             </div>
 
-            <div class="col-7 col-md-5 padding-0 align-self-center">
+            <div class="col-7 col-xl-5 padding-0 align-self-center">
                 <div class="row no-gutters float-right navlinks-container">
                     <a href="#">
                         <p class="navlink-font">Home</p>
@@ -70,9 +72,9 @@
         <!-- HOME PAGE -->
         <div class="homepage-container">
 
-            <div class="circle circle-red"></div>
-            <div class="circle circle-yellow"></div>
-            <div class="circle circle-green"></div>
+            <div class="circle circle--red"></div>
+            <div class="circle circle--yellow"></div>
+            <div class="circle circle--green"></div>
 
             <div class="row no-gutters align-items-center">
 
@@ -106,6 +108,50 @@
                 </div>
 
             </div>
+        </div>
+
+        <!-- ABOUT PAGE -->
+        <div class="aboutpage-container">
+
+            <div class="about-content--1">
+                <div class="row no-gutters">
+
+                    <div class="offset-xl-1 col-4 about-icon align-self-center">
+                        <img src="images/about-icon-01.svg">
+                    </div>
+                    <div class="col-12 col-sm-5 about-description align-self-center">
+                        <h2>Lorem ipsum dolor sit amet</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit, sed do eiusmod tempor incididunt ut labore 
+                            et dolore magna aliqua.
+                        </p>
+                        <div class="square square--yellow square--yellow--1"></div>
+                        <div class="square square--yellow square--yellow--2"></div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="about-content--2">
+                <div class="row no-gutters">
+
+                    <div class="col-xl-1"></div>
+                    <div class="col-5 about-icon align-self-center">
+                        <img src="images/about-icon-02.svg">
+                    </div>
+                    <div class="col-12 col-sm-4 about-description align-self-center">
+                        <h2>Lorem ipsum dolor sit amet</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                            elit, sed do eiusmod tempor incididunt ut labore 
+                            et dolore magna aliqua.
+                        </p>
+                        <div class="square square--green square--green--1"></div>
+                        <div class="square square--green square--green--2"></div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
 
         
