fix: get started button no longer overlay top navbar, navbar links now jumps to their according sections

--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -26,13 +26,13 @@
         <div class="navibar-mobile">
 
             <div class="navlinks-container">
-                <a href="#">
+                <a href="#HomeSection">
                     <p class="navlink-font">Home</p>
                 </a>
-                <a href="#">
+                <a href="#AboutSection">
                     <p class="navlink-font">About</p>
                 </a>
-                <a href="#">
+                <a href="#ContactSection">
                     <p class="navlink-font">Contact</p>
                 </a>
             </div>
@@ -56,13 +56,13 @@
 
             <div class="col-7 col-xl-5 padding-0 align-self-center">
                 <div class="row no-gutters float-right navlinks-container">
-                    <a href="#">
+                    <a href="#HomeSection">
                         <p class="navlink-font">Home</p>
                     </a>
-                    <a href="#">
+                    <a href="#AboutSection">
                         <p class="navlink-font">About</p>
                     </a>
-                    <a href="#">
+                    <a href="#ContactSection">
                         <p class="navlink-font">Contact</p>
                     </a>
                 </div>
@@ -70,7 +70,7 @@
         </div>
 
         <!-- HOME PAGE -->
-        <div class="homepage-container">
+        <div id="HomeSection" class="homepage-container">
 
             <div class="circle circle--red"></div>
             <div class="circle circle--yellow"></div>
@@ -111,7 +111,7 @@
         </div>
 
         <!-- ABOUT PAGE -->
-        <div class="aboutpage-container">
+        <div id="AboutSection" class="aboutpage-container">
 
             <div class="about-content--1">
                 <div class="row no-gutters">
