feat: added tablet and mobile view (About Section)

--- a/logik-frontend/logik.html
+++ b/logik-frontend/logik.html
@@ -116,10 +116,10 @@
             <div class="about-content--1">
                 <div class="row no-gutters">
 
-                    <div class="offset-xl-1 col-4 about-icon align-self-center">
+                    <div class="offset-xl-1 col-12 col-md-6 col-xl-4 about-icon align-self-center">
                         <img src="images/about-icon-01.svg">
                     </div>
-                    <div class="col-12 col-sm-5 about-description align-self-center">
+                    <div class="col-12 col-md-6 col-xl-5 about-description align-self-center">
                         <h2>Lorem ipsum dolor sit amet</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                             elit, sed do eiusmod tempor incididunt ut labore 
@@ -136,10 +136,10 @@
                 <div class="row no-gutters">
 
                     <div class="col-xl-1"></div>
-                    <div class="col-5 about-icon align-self-center">
+                    <div class="col-12 col-md-6 col-xl-5 about-icon align-self-center">
                         <img src="images/about-icon-02.svg">
                     </div>
-                    <div class="col-12 col-sm-4 about-description align-self-center">
+                    <div class="col-12 col-md-6 col-xl-4 about-description align-self-center">
                         <h2>Lorem ipsum dolor sit amet</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
                             elit, sed do eiusmod tempor incididunt ut labore 
