--- a/destination-frontend/index.html
+++ b/destination-frontend/index.html
@@ -8,9 +8,32 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/destination-frontend/static/css/global.css">
+    <link rel="stylesheet" href="/destination-frontend/static/css/icons.css">
+
 </head>
 <body>
     <section class="wrapper">
+
+      <!-- OVERLAY ICONS -->
+      <a href="#">
+        <img class="menu-icon" src="/destination-frontend/static/img/icons/menu.svg" alt="Menu">
+      </a>
+      
+      <div class="social-icon-container">
+        <div class="social-icon-wrapper">
+          <img src="/destination-frontend/static/img/icons/facebook.svg" alt="Facebook">
+        </div>
+        <div class="social-icon-wrapper">
+          <img src="/destination-frontend/static/img/icons/twitter.svg" alt="Twitter">
+        </div>
+        <div class="social-icon-wrapper">
+          <img src="/destination-frontend/static/img/icons/instagram.svg" alt="Instagram">
+        </div>
+      </div>
+      
+      <div class="phone-icon">
+        <img src="/destination-frontend/static/img/icons/phone.svg" alt="Contact">
+      </div>
 
         <div id="carouselExampleIndicators" class="carousel slide carousel-setting" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -28,7 +51,7 @@
                   <p class="rating-style">23,450 ratings</p>
                   <a href="#">
                     <div class="btn-style d-flex justify-content-center align-items-center">
-                      <p class="btn-text mb-0">Learn More</p>
+                      Learn More
                     </div>
                   </a>
                 </div>
@@ -42,12 +65,16 @@
             </div> -->
 
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+              <div class="carousel-arrow-wrapper d-flex justify-content-center align-items-center">
+                <img class="arrow-icon"  aria-hidden="true" src="/destination-frontend/static/img/icons/arrow-left.svg" alt="Previous Destination">
+                <span class="sr-only">Previous</span>
+              </div>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+              <div class="carousel-arrow-wrapper d-flex justify-content-center align-items-center">
+                <img class="arrow-icon"  aria-hidden="true" src="/destination-frontend/static/img/icons/arrow-right.svg" alt="Previous Destination">
+                <span class="sr-only">Next</span>
+              </div>
             </a>
           </div>
 
