style: add rating icons

--- a/destination-frontend/index.html
+++ b/destination-frontend/index.html
@@ -30,7 +30,7 @@
           <img src="/destination-frontend/static/img/icons/instagram.svg" alt="Instagram">
         </div>
       </div>
-      
+
       <div class="phone-icon">
         <img src="/destination-frontend/static/img/icons/phone.svg" alt="Contact">
       </div>
@@ -49,6 +49,14 @@
                   <h2>PARIS</h2>
                   <p class="description-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   <p class="rating-style">23,450 ratings</p>
+                  <div class="rating-icon-wrapper d-flex">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                  </div>
+
                   <a href="#">
                     <div class="btn-style d-flex justify-content-center align-items-center">
                       Learn More
@@ -56,13 +64,51 @@
                   </a>
                 </div>
               </div>
-              <!-- <div class="carousel-item">
+              <div class="carousel-item">
                 <img class="d-block img-setting" src="/destination-frontend/static/img/rome.jpg" alt="ROME">
+                <div class="content-container d-flex flex-column">
+                  <div class="content-background"></div>
+                  <h2>ROME</h2>
+                  <p class="description-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="rating-style">50,203 ratings</p>
+                  <div class="rating-icon-wrapper d-flex">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-empty.svg" alt="Empty star">
+                  </div>
+
+                  <a href="#">
+                    <div class="btn-style d-flex justify-content-center align-items-center">
+                      Learn More
+                    </div>
+                  </a>
+                </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block img-setting" src="/destination-frontend/static/img/maui.jpg" alt="MAUI">
+                <div class="content-container d-flex flex-column">
+                  <div class="content-background"></div>
+                  <h2>MAUI</h2>
+                  <p class="description-style">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="rating-style">10,394 ratings</p>
+                  <div class="rating-icon-wrapper d-flex">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-full.svg" alt="Full star">
+                    <img class="rating-icon" src="/destination-frontend/static/img/icons/star-half.svg" alt="Half star">
+                  </div>
+
+                  <a href="#">
+                    <div class="btn-style d-flex justify-content-center align-items-center">
+                      Learn More
+                    </div>
+                  </a>
+                </div>
               </div>
-            </div> -->
+            </div>
 
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
               <div class="carousel-arrow-wrapper d-flex justify-content-center align-items-center">
